--- a/config.toml
+++ b/config.toml
@@ -12,12 +12,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [[menu.main]]
     name = "About"
     url = "/about/"
+    
+[[menu.main]]
+    name = "Andrew Gehman's Data Science Blog"
+    
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
-[[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    url = "https://github.com/agehma64/Myblog-/blob/master/config.toml"
 
 [params]
     description = "A website built through Hugo and blogdown."
@@ -32,8 +33,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.1"
 
     [params.logo]
-    url = "logo.png"
-    width = 50
-    height = 50
+    url = "https://www.facebook.com/photo.php?fbid=107213249696548&l=ff79c01451"
+    width = 250
+    height = 250
     alt = "Logo"
 
