--- a/config.toml
+++ b/config.toml
@@ -30,3 +30,14 @@ features = ["academic profile",
   name = ""
   homepage = ""
   repo = ""
+
+[[menu.main]]
+    name = "Andrew's Data Science Blog"
+    
+[[menu.main]]
+    name = "My Github"
+    url = "https://github.com/agehma64/Myblog-"
+    
+[[photo.main]]
+    url = "https://www.facebook.com/photo.php?fbid=107213249696548&set=a.107202966364243.1073741826.100012236195395&type=3" 
+    
